--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-
-
 body {
   margin: 0;
   background: #1e1e1e;
@@ -80,7 +78,7 @@ blockquote {
   background-image: url("\Users\man35\Documents\s-chistogo-lista-review\images\cover.svg");
   background-repeat: no-repeat;
   background-position: right center;
-  background-size: 95% auto;
+  background-size: 100% auto;
 }
 
 .cover-title {
@@ -92,6 +90,10 @@ blockquote {
 
 .accent-span {
   display: block;
+  font-weight: 500;
+  font-family: "EB Garmond", serif;
+  font-style: normal;
+  line-height: 115%;
 }
 
 .text-center {
@@ -104,7 +106,7 @@ blockquote {
 
 .intro {
   padding: 30px 20px 38px;
-  /* gap: 24px; */
+  line-height: 120%;
 }
 
 .intro__heading {
@@ -123,7 +125,7 @@ blockquote {
 .intro__date {
   white-space: nowrap;
   font-size: 16px;
-  line-height: 1.2;
+  line-height: 120%;
 }
 
 .intro__main-text {
@@ -131,6 +133,7 @@ blockquote {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  line-height: 135%;
 }
 
 .reasons {
@@ -141,7 +144,13 @@ blockquote {
 .content-section__introduction {
   font-size: 20px;
   margin: 32px 0;
-  line-height: 1.35;
+  line-height: 27px;
+}
+
+.content-section__introduction_dark {
+  font-size: 20px;
+  margin: 32px 0;
+  line-height: 135%;
 }
 
 .content-section__list {
@@ -150,7 +159,7 @@ blockquote {
   gap: 16px;
   padding: 0 0 0 16px;
   font-size: 16px;
-  line-height: 1.35;
+  line-height: 21.6px;
 }
 
 .content-section__list-accent {
@@ -163,4 +172,53 @@ blockquote {
 
 .footer {
   padding: 20px;
+}
+
+.content-section__subtitle_dark {
+  color: #f5f5f5;
+}
+
+.firstSpeech {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  gap: 8px;
+  width: 319px;
+  height: 495px;
+  background: #343434;
+  border-radius: 30px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.secondSpeech {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  gap: 8px;
+  width: 319px;
+  height: 368px;
+  background: #fee42a;
+  border-radius: 30px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.thirdSpeech {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  gap: 8px;
+  width: 319px;
+  height: 559px;
+  background: #343434;
+  border-radius: 30px;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
 }
