--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 body {
+  box-sizing: border-box;
   margin: 0;
-  background: #1e1e1e;
-  font-family: Inter, sans-serif;
+  background-color: #1e1e1e;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
 }
 
@@ -21,79 +22,79 @@ blockquote {
 
 .content-section {
   box-sizing: border-box;
-  width: 100%;
-  max-width: 360px;
-  min-height: 100px;
-  margin: 0 auto;
+  margin: auto;
+  width: 360px;
 }
 
 .content-section_theme_dark {
-  background-color: black;
-  color: white;
+  background-color: #131313;
+  color: #f5f5f5;
 }
 
 .content-section_theme_bright {
   background-color: #fee42a;
-  color: black;
+  color: var(--black-bg, #131313);
 }
 
 .header {
-  padding: 24px 20px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-}
-
-.header__logo {
-  width: 78px;
-}
-
-.header__logo-image {
-  width: 100%;
+  padding: 24px 20px;
 }
 
 .header__menu-list {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  row-gap: 12px;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
   list-style: none;
 }
 
-.header__menu-link {
+.header__menu-item {
+  text-decoration-line: underline;
   color: #f5f5f5;
-  font-size: 16px;
-  line-height: 1.2;
 }
 
-.header__menu-link {
-  text-decoration: underline;
+.header__menu-item_active {
+  text-decoration-line: none;
+  color: #f5f5f5;
 }
 
-.header__menu-item-active .header__menu-link {
-  text-decoration: none;
+.header__logo {
+  display: flex;
+  width: 78.45px;
+  height: 15.43px;
 }
 
 .cover {
-  padding: 7px 24px 30px 20px;
-  background-image: url("\Users\man35\Documents\s-chistogo-lista-review\images\cover.svg");
+  background-image: url(../images/cover.svg);
+  /*Путь переписал. Получилось*/
+  background-size: 94% auto;
   background-repeat: no-repeat;
-  background-position: right center;
-  background-size: 100% auto;
+  background-position: right;
+  min-height: 198px;
 }
 
-.cover-title {
-  font-family: "EB Garamond", serif;
-  font-weight: 400;
-  color: #fff;
+.cover__title {
+  padding: 7px 24px 35px 20px;
+  display: block;
+  font-family: "EB Garamond", sans;
   font-size: 72px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  /* 72px */
 }
 
 .accent-span {
   display: block;
-  font-weight: 500;
-  font-family: "EB Garmond", serif;
-  font-style: normal;
-  line-height: 115%;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -105,120 +106,186 @@ blockquote {
 }
 
 .intro {
-  padding: 30px 20px 38px;
-  line-height: 120%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 37px;
 }
 
 .intro__heading {
   display: flex;
-  justify-content: space-between;
-  color: #ccc;
-  margin-bottom: 24px;
 }
 
 .intro__title {
+  color: var(--text-gray, #ccc);
+  font-family: "Inter", sans-serif;
   font-size: 16px;
-  line-height: 1.2;
+  font-style: normal;
   font-weight: 400;
+  line-height: 120%;
 }
 
 .intro__date {
   white-space: nowrap;
+  color: var(--text-gray, #ccc);
+  font-family: "Inter", sans-serif;
   font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 120%;
 }
 
 .intro__main-text {
-  color: #f5f5f5;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  line-height: 135%;
+  padding-top: 24px;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21.6px;
 }
 
 .reasons {
-  padding: 40px 20px;
-  gap: 32px;
+  padding: 40px 20px 24px 20px;
+}
+
+.content-section__subtitle {
+  font-family: "EB Garamond", sans;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 115%;
 }
 
 .content-section__introduction {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-family: "Inter", sans-serif;
   font-size: 20px;
-  margin: 32px 0;
-  line-height: 27px;
-}
-
-.content-section__introduction_dark {
-  font-size: 20px;
-  margin: 32px 0;
+  font-style: normal;
+  font-weight: 400;
   line-height: 135%;
 }
 
 .content-section__list {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  padding: 0 0 0 16px;
+  padding-left: 16px;
+}
+
+.content-section__list-item {
+  padding-bottom: 16px;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 21.6px;
 }
 
 .content-section__list-accent {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 700;
+  line-height: 21.6px;
 }
 
 .how-to {
-  padding: 40px 20px 60px;
-}
-
-.footer {
-  padding: 20px;
-}
-
-.content-section__subtitle_dark {
+  padding: 40px 20px 28px 20px;
   color: #f5f5f5;
 }
 
-.firstSpeech {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
-  gap: 8px;
-  width: 319px;
-  height: 495px;
-  background: #343434;
-  border-radius: 30px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+.card-list {
+  list-style-type: none;
 }
 
-.secondSpeech {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
-  gap: 8px;
-  width: 319px;
-  height: 368px;
-  background: #fee42a;
-  border-radius: 30px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
+.cards-list-item {
+  list-style-type: none;
 }
 
-.thirdSpeech {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
-  gap: 8px;
-  width: 319px;
-  height: 559px;
-  background: #343434;
+.card_theme_dark {
+  background: var(--gray-bg, #343434);
+  color: #f5f5f5;
+}
+
+.card_theme_bright {
+  background: var(--yellow-bg, #fee42a);
+  color: #131313;
+}
+
+.card {
   border-radius: 30px;
-  flex: none;
-  order: 2;
-  flex-grow: 0;
+  padding: 20px;
+  margin-bottom: 32px;
+}
+
+
+.card__author-foto {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.card__author-name {
+  padding-top: 7px;
+  padding-bottom: 8px;
+  text-align: left;
+  color: #f5f5f5;
+  font-family: "Interbold", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+.card__title {
+  padding-bottom: 8px;
+  font-family: "EB Garamond", sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 135%;
+}
+
+.card__text {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21.6px;
+}
+
+.footer {
+  padding: 20px 20px;
+  display: flex;
+  border-top: 1px solid var(--yellow-bg, #fee42a);
+  justify-content: space-between;
+}
+
+.footer__copy {
+  display: flex;
+  color: #f5f5f5;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 135%;
+}
+
+.footer__links {
+  display: flex;
+  list-style: none;
+  column-gap: 16px;
+  color: #f5f5f5;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 125%;
+}
+
+.footer__links-social-networks {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 125%;
 }
