--- a/styles/style.css
+++ b/styles/style.css
@@ -227,7 +227,7 @@ blockquote {
   padding-bottom: 8px;
   text-align: left;
   color: #f5f5f5;
-  font-family: "Interbold", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
