--- a/styles/style.css
+++ b/styles/style.css
@@ -105,77 +105,84 @@ blockquote {
 }
 
 .intro {
-  padding: 30px 20px 38px;
-  line-height: 120%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 37px;
 }
 
 .intro__heading {
   display: flex;
-  justify-content: space-between;
-  color: #ccc;
-  margin-bottom: 24px;
 }
 
 .intro__title {
+  color: var(--text-gray, #ccc);
+  font-family: "Inter", sans-serif;
   font-size: 16px;
-  line-height: 1.2;
+  font-style: normal;
   font-weight: 400;
+  line-height: 120%;
 }
 
 .intro__date {
   white-space: nowrap;
+  color: var(--text-gray, #ccc);
+  font-family: "Inter", sans-serif;
   font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 120%;
 }
 
 .intro__main-text {
-  color: #f5f5f5;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  line-height: 135%;
+  padding-top: 24px;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21.6px;
 }
 
 .reasons {
-  padding: 40px 20px;
-  gap: 32px;
+  padding: 40px 20px 12px 20px;
+}
+
+.content-section__subtitle {
+  font-family: "EB Garamond", sans;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 115%;
 }
 
 .content-section__introduction {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-family: "Inter", sans-serif;
   font-size: 20px;
-  margin: 32px 0;
-  line-height: 27px;
-}
-
-.content-section__introduction_dark {
-  font-size: 20px;
-  margin: 32px 0;
+  font-style: normal;
+  font-weight: 400;
   line-height: 135%;
 }
 
 .content-section__list {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  padding: 0 0 0 16px;
+  padding-left: 16px;
+}
+
+.content-section__list-item {
+  padding-bottom: 16px;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 21.6px;
 }
 
 .content-section__list-accent {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 700;
-}
-
-.how-to {
-  padding: 40px 20px 60px;
-}
-
-.footer {
-  padding: 20px;
-}
-
-.content-section__subtitle_dark {
-  color: #f5f5f5;
+  line-height: 21.6px;
 }
 
 .how-to {
@@ -207,7 +214,6 @@ blockquote {
   margin-bottom: 32px;
 }
 
-
 .card__author-foto {
   border-radius: 50%;
   width: 100px;
@@ -219,7 +225,7 @@ blockquote {
   padding-bottom: 8px;
   text-align: left;
   color: #f5f5f5;
-  font-family: "Inter", sans-serif;
+  font-family: "Interbold", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
@@ -282,3 +288,5 @@ blockquote {
   font-weight: 400;
   line-height: 125%;
 }
+
+
